Sun Jun 30 10:59:23 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (join_argv): use backslash instead of slash in program
	  path, otherwise cannot invoke "./c\u{1ee7}a.exe" for some reason.
	  [ruby-core:24309] [Bug #1771]

	* io.c (spawnv, spawn): use UTF-8 spawn family.  [Bug #1771]

	* process.c (proc_exec_sh, proc_spawn_cmd, proc_spawn_sh): ditto.

	* win32/win32.c (translate_char, join_argv, has_redirection): make
	  codepage aware.

	* win32/win32.c (rb_w32_udln_find_exe_r, rb_w32_udln_find_file_r):
	  codepage independent versions.

	* win32/win32.c (w32_spawn): extract codepage aware code from
	  rb_w32_spawn().

	* win32/win32.c (rb_w32_uspawn): add UTF-8 version function.

	* win32/win32.c (w32_aspawn_flags): extract codepage aware code from
	  rb_w32_aspawn_flags().

	* win32/win32.c (rb_w32_uaspawn_flags, rb_w32_uaspawn_flags): add
	  UTF-8 version functions.

	* win32/win32.c (w32_getenv): extract codepage aware code from
	  rb_w32_ugetenv() and rb_w32_getenv().

	* win32/win32.c (w32_stati64): extract codepage aware code from
	  rb_w32_ustati64() and rb_w32_stati64().

	* dln.h (DLN_FIND_EXTRA_ARG, DLN_FIND_EXTRA_ARG_DECL): allow extra
	  arguments to dln_find_{exe,file}_r().

	* dln_find.c (dln_find_exe_r, dln_find_file_r): add extract arguments.

	* process.c (EXPORT_STR, EXPORT_DUP): convert to default process
	  encoding if defined.

	* process.c (check_exec_env_i): convert environment variables too.

	* process.c (rb_exec_fillarg): convert program path and arguments too.

Sun Jun 30 01:57:08 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_rshift): Use abs2twocomp and twocomp2abs_bang.

Sun Jun 30 00:14:20 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (RBIGNUM_SET_NEGATIVE_SIGN): New macro.
	  (RBIGNUM_SET_POSITIVE_SIGN): Ditto.
	  (rb_big_neg): Inline get2comp to avoid double negation.

Sat Jun 29 23:26:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_neg): Extracted from bary_2comp.